--- a/nearu.html
+++ b/nearu.html
@@ -14,16 +14,20 @@
   <body>
     <div class="container">
       <header id="header"></header>
-      <div class="content">
-        <div id="time" class="col-left"></div>
-        <div id="loc" class="col-right"></div>
-        <div id="map"></div>
-        <div id="restaurant"></div>
-        <div id= "test"></div>
+      <div id="content">
+        <div id="city" class="section"></div>
+        <div id="time" class="section section-small"></div>
+        <div id="loc" class="section section-small"></div>
+        <div id="weather" class="section"></div>
+        <div id="map" class="section"></div>
+        <div id="restaurant" class="section"></div>
+        <div id= "walmart" class="section"></div>
       </div>
+      <footer id="footer"></footer>
     </div>
 
   <script src="js/modernizr.js"></script>
+  <script src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
   <script src="js/main.js"></script>
