Finished current city, time, weather, restaurants & map

--- a/nearu.html
+++ b/nearu.html
@@ -15,13 +15,13 @@
     <div class="container">
       <header id="header"></header>
       <div id="content">
-        <div id="city" class="section"></div>
+        <div id="city" class="section section-small"></div>
         <div id="time" class="section section-small"></div>
-        <div id="loc" class="section section-small"></div>
         <div id="weather" class="section"></div>
-        <div id="map" class="section"></div>
         <div id="restaurant" class="section"></div>
-        <div id= "walmart" class="section"></div>
+        <div id="walmart" class="section"></div>
+        <div id="map" class="section"></div>
+
       </div>
       <footer id="footer"></footer>
     </div>
@@ -29,6 +29,7 @@
   <script src="js/modernizr.js"></script>
   <script src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.simpleWeather/3.0.2/jquery.simpleWeather.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
   <script src="js/main.js"></script>
 
